ffi/include/kawaiifi.h

typedef struct Interface Interface;
typedef struct Scan Scan;
typedef struct Ie Ie;
/**
 * FFI-safe equivalent of kawaiifi::BusType.
 */
typedef enum BusType {
#if defined(__linux__)
  BUS_TYPE_PCI,
#endif
#if defined(__linux__)
  BUS_TYPE_USB,
#endif
#if defined(__linux__)
  BUS_TYPE_SDIO,
#endif
#if defined(__linux__)
  BUS_TYPE_UNKNOWN,
#endif
} BusType;
/**
 * FFI-safe equivalent of kawaiifi::scan::Backend.
 */
typedef enum Backend {
#if defined(__linux__)
  BACKEND_NL80211,
#endif
#if defined(__linux__)
  BACKEND_NETWORK_MANAGER,
#endif
} Backend;
typedef struct Flags {
  /**
   * The scan can be delayed or paused to allow normal data transmission
   * or other higher priority operations to proceed.
   */
  bool low_priority;
  /**
   * Flush cached scan results before starting a new scan.
   *
   * When set, the driver will discard previously cached BSS entries
   * before reporting new scan results.
   */
  bool flush;
  /**
   * Force a scan even if the interface is an AP.
   *
   * Indicates this scan was initiated by an AP, which may have
   * different scanning behavior than client devices.
   */
  bool ap;
  /**
   * Use a random MAC address for probe requests.
   *
   * Privacy feature that randomizes the device's MAC address during
   * active scanning to prevent tracking across networks.
   */
  bool random_addr;
  /**
   * Fill the dwell time in the FILS request parameters IE in the probe request
   */
  bool fils_max_channel_time;
  /**
   * Accept broadcast probe responses.
   */
  bool accept_bcast_probe_resp;
  /**
   * Send probe request frames at rate of at least 5.5M.
   */
  bool oce_probe_req_high_tx_rate;
  /**
   * Allow probe request tx deferral and suppression.
   */
  bool oce_probe_req_deferral_suppression;
  /**
   * Perform the scan with minimal time on each channel.
   */
  bool low_span;
  /**
   * Perform the scan with lower power.
   */
  bool low_power;
  /**
   * Perform the scan with highest accuracy to find all available networks.
   */
  bool high_accuracy;
  /**
   * Use random sequence numbers in probe requests.
   */
  bool random_sn;
  /**
   * Use minimal content in probe requests.
   */
  bool min_preq_content;
  /**
   * Frequencies specified in kHz (not MHz).
   */
  bool freq_khz;
  /**
   * Discover colocated 6 GHz APs through RNR.
   */
  bool colocated_6ghz;
} Flags;
/**
 * Frees a string returned by any kawaiifi function.
 */
void kawaiifi_string_free(char *s);
/**
 * Frees a scan returned by `kawaiifi_interface_scan`. Does nothing if `scan` is null.
 */
void kawaiifi_scan_free(struct Scan *scan);
/**
 * Writes the PCI/USB device ID into `out`. Returns false if unavailable or `interface` is null.
 */
bool kawaiifi_interface_device_id(const struct Interface *interface, uint16_t *out);
/**
 * Returns the vendor name as a C string, or null if unavailable.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_vendor_name(const struct Interface *interface);
/**
 * Returns the device name as a C string, or null if unavailable.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_device_name(const struct Interface *interface);
/**
 * Returns the driver name as a C string, or null if unavailable.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_driver(const struct Interface *interface);
/**
 * Returns the bus type (PCI, USB, SDIO) the wireless adapter is connected via.
 */
enum BusType kawaiifi_interface_bus_type(const struct Interface *interface);
/**
 * Performs a blocking scan and returns the result, or null on error.
 * The caller must free the returned scan with `kawaiifi_scan_free`.
 */
struct Scan *kawaiifi_interface_scan(const struct Interface *interface, enum Backend backend);
/**
 * Returns the wiphy index of the radio that performed the scan, or 0 if `scan` is null.
 */
uint32_t kawaiifi_scan_wiphy(const struct Scan *scan);
/**
 * Returns the interface index (ifindex) that performed the scan, or 0 if `scan` is null.
 */
uint32_t kawaiifi_scan_ifindex(const struct Scan *scan);
/**
 * Returns a borrowed pointer to the frequencies (in MHz) that were scanned and writes the count into `out_count`.
 * The pointer is valid for the lifetime of the scan. Do NOT free it.
 */
const uint32_t *kawaiifi_scan_freqs_mhz(const struct Scan *scan,
                                        uintptr_t *out_count);
/**
 * Returns the number of information elements requested in the scan probe, or 0 if `scan` is null.
 */
uintptr_t kawaiifi_scan_ie_count(const struct Scan *scan);
/**
 * Returns a borrowed pointer to the information element at `index`, or null if out of bounds or `scan` is null.
 * The pointer is valid for the lifetime of the scan. Do NOT free it.
 */
const struct Ie *kawaiifi_scan_ie_get(const struct Scan *scan,
                                      uintptr_t index);
/**
 * Writes the scan flags into `out`. Returns false if unavailable or `scan` is null.
 */
bool kawaiifi_scan_flags(const struct Scan *scan, struct Flags *out);
/**
 * Performs a blocking scan and returns the result, or null on error.
 * The caller must free the returned scan with `kawaiifi_scan_free`.
 */
struct Scan *kawaiifi_interface_scan(const struct Interface *interface);
/**
 * Performs a blocking scan and returns the result, or null on error.
 * The caller must free the returned scan with `kawaiifi_scan_free`.
 */
struct Scan *kawaiifi_interface_scan(const struct Interface *interface);