ffi/include/NativeMethods.Linux.g.cs


        /// <summary>
        ///  Writes the PCI/USB device ID into `out`. Returns false if unavailable or `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_device_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_device_id(Interface* @interface, ushort* @out);

        /// <summary>
        ///  Returns the vendor name as a C string, or null if unavailable.
        ///  The caller must free the returned string with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_vendor_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_interface_vendor_name(Interface* @interface);

        /// <summary>
        ///  Returns the device name as a C string, or null if unavailable.
        ///  The caller must free the returned string with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_device_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_interface_device_name(Interface* @interface);

        /// <summary>
        ///  Returns the driver name as a C string, or null if unavailable.
        ///  The caller must free the returned string with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_driver", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_interface_driver(Interface* @interface);

        /// <summary>
        ///  Returns the bus type (PCI, USB, SDIO) the wireless adapter is connected via.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_bus_type", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern BusType kawaiifi_interface_bus_type(Interface* @interface);

        /// <summary>
        ///  Performs a blocking scan and returns the result, or null on error.
        ///  The caller must free the returned scan with `kawaiifi_scan_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_scan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Scan* kawaiifi_interface_scan(Interface* @interface, Backend backend);

        /// <summary>
        ///  Returns the wiphy index of the radio that performed the scan, or 0 if `scan` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_scan_wiphy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint kawaiifi_scan_wiphy(Scan* scan);

        /// <summary>
        ///  Returns the interface index (ifindex) that performed the scan, or 0 if `scan` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_scan_ifindex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint kawaiifi_scan_ifindex(Scan* scan);

        /// <summary>
        ///  Returns a borrowed pointer to the frequencies (in MHz) that were scanned and writes the count into `out_count`.
        ///  The pointer is valid for the lifetime of the scan. Do NOT free it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_scan_freqs_mhz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint* kawaiifi_scan_freqs_mhz(Scan* scan, nuint* out_count);

        /// <summary>
        ///  Returns the number of information elements requested in the scan probe, or 0 if `scan` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_scan_ie_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint kawaiifi_scan_ie_count(Scan* scan);

        /// <summary>
        ///  Returns a borrowed pointer to the information element at `index`, or null if out of bounds or `scan` is null.
        ///  The pointer is valid for the lifetime of the scan. Do NOT free it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_scan_ie_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Ie* kawaiifi_scan_ie_get(Scan* scan, nuint index);

        /// <summary>
        ///  Writes the scan flags into `out`. Returns false if unavailable or `scan` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_scan_flags", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_scan_flags(Scan* scan, Flags* @out);


    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct Flags
    {
        /// <summary>
        ///  The scan can be delayed or paused to allow normal data transmission
        ///  or other higher priority operations to proceed.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool low_priority;
        /// <summary>
        ///  Flush cached scan results before starting a new scan.
        ///
        ///  When set, the driver will discard previously cached BSS entries
        ///  before reporting new scan results.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool flush;
        /// <summary>
        ///  Force a scan even if the interface is an AP.
        ///
        ///  Indicates this scan was initiated by an AP, which may have
        ///  different scanning behavior than client devices.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool ap;
        /// <summary>
        ///  Use a random MAC address for probe requests.
        ///
        ///  Privacy feature that randomizes the device's MAC address during
        ///  active scanning to prevent tracking across networks.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool random_addr;
        /// <summary>
        ///  Fill the dwell time in the FILS request parameters IE in the probe request
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool fils_max_channel_time;
        /// <summary>
        ///  Accept broadcast probe responses.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool accept_bcast_probe_resp;
        /// <summary>
        ///  Send probe request frames at rate of at least 5.5M.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool oce_probe_req_high_tx_rate;
        /// <summary>
        ///  Allow probe request tx deferral and suppression.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool oce_probe_req_deferral_suppression;
        /// <summary>
        ///  Perform the scan with minimal time on each channel.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool low_span;
        /// <summary>
        ///  Perform the scan with lower power.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool low_power;
        /// <summary>
        ///  Perform the scan with highest accuracy to find all available networks.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool high_accuracy;
        /// <summary>
        ///  Use random sequence numbers in probe requests.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool random_sn;
        /// <summary>
        ///  Use minimal content in probe requests.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool min_preq_content;
        /// <summary>
        ///  Frequencies specified in kHz (not MHz).
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool freq_khz;
        /// <summary>
        ///  Discover colocated 6 GHz APs through RNR.
        /// </summary>
        [MarshalAs(UnmanagedType.U1)] public bool colocated_6ghz;
    }


    /// <summary>
    ///  FFI-safe equivalent of kawaiifi::BusType.
    /// </summary>
    internal enum BusType : uint
    {
        Pci,
        Usb,
        Sdio,
        Unknown,
    }

    /// <summary>
    ///  FFI-safe equivalent of kawaiifi::scan::Backend.
    /// </summary>
    internal enum Backend : uint
    {
        Nl80211,
        NetworkManager,
    }


}
